# summerofcode2018soln

./: README.html  README.md  stack.yaml  summerofcode2018soln.cabal
data/: 05-output.ppm  06-small.txt  06-smaller.txt  08-maze.txt  08-smaller.txt  09-bags.txt  small_invites.txt
src/task0/: task0.hs  task0.ipynb  worked-solution.ipynb
src/task1/: task1-mpc.hs  task1.awk  task1.hs  task1.ipynb
src/task2/: task2.hs
src/task3/: task3.hs  task3.ipynb
src/task4/: task4.hs  task4.ipynb
src/task5/: task5-lines.hs  task5-nore.ipynb  task5-re.ipynb  task5.hs
src/task6/: task6-monad.hs  task6.hs  task6.ipynb
src/task7/: 07-example.txt  pancake-sort-creation.ipynb  task7.hs  task7.ipynb
src/task8/: task8-bounded.hs  task8.hs  task8.ipynb
src/task9/: task9.hs  task9.ipynb
