name:                summerofcode2018soln
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neilnjae/summerofcode2018soln#readme
license:             BSD3
license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2016 Neil Smith
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable summerofcode2018soln
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable task0
  hs-source-dirs:      src/task0
  main-is:             task0.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , split

executable task1
  hs-source-dirs:      src/task1
  main-is:             task1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable task1-mpc
  hs-source-dirs:      src/task1
  main-is:             task1-mpc.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec

executable task2
  hs-source-dirs:      src/task2
  main-is:             task2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable task3
  hs-source-dirs:      src/task3
  main-is:             task3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec  
                     , containers

executable task4
  hs-source-dirs:      src/task4
  main-is:             task4.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , unordered-containers

executable task5
  hs-source-dirs:      src/task5
  main-is:             task5.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text

executable task5-lines
  hs-source-dirs:      src/task5
  main-is:             task5-lines.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text   

executable task6
  hs-source-dirs:      src/task6
  main-is:             task6.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , unordered-containers

executable task6-monad
  hs-source-dirs:      src/task6
  main-is:             task6-monad.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , unordered-containers
                                         